--- a/src/main/webapp/WEB-INF/commandHandlerURI.properties
+++ b/src/main/webapp/WEB-INF/commandHandlerURI.properties
@@ -9,4 +9,4 @@
 /delete.do=kr.article.command.DeleteArticleHandler
 /memDelete.do= member.command.MemberDeleteHandler
 /comment.do = kr.article.command.WriteCommentHandler
-/commentlist.do = kr.article.command.ListCommentHandler
+/delComment.do=kr.article.command.DeleteCommentHandler
