--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -55,5 +55,6 @@
 		<url-pattern>/modify.do</url-pattern>
 		<url-pattern>/delete.do</url-pattern>
 		<url-pattern>/comment.do</url-pattern>
+		<url-pattern>/delComment.do</url-pattern>
 	</filter-mapping>
 </web-app>
